--- a/src/bottom-slider.pug
+++ b/src/bottom-slider.pug
@@ -1,8 +1,9 @@
 a(href="#")#prev-bottom.arrow-left
 .container#viewport
   .slider-carousel(style="left: 0")
-    .slide.slide5
-      img(src="/img/vermeer.jpg")
+    .slide(itemscope, itemtype="https://schema.org/VisualArtwork").slide5
+      img(src="/img/ajax-loader.gif", data-src="/img/vermeer.jpg", loading="lazy").js-lazy
+   
       .details
         span.names
           strong(itemprop="name") Девушка с жемчужной сережкой, 
@@ -11,28 +12,31 @@ a(href="#")#prev-bottom.arrow-left
         span(itemprop="size").numbers 49 х 39 см, 
           span(itemprop="material") холст
             span(itemprop="price").price 900
-    .slide.slide4
-      img(src="/img/david.jpg")
+    .slide(itemscope, itemtype="https://schema.org/VisualArtwork").slide4
+      img(src="/img/ajax-loader.gif", data-src="/img/david.jpg", loading="lazy").js-lazy
+
       .details
         span.names
-          strong(itemprop="name") Бонапарт на перевале Сен-Бернар,
+          strong(itemprop="name") Бонапарт на перевале Сен-Бернар, 
             span(itemprop="year") 1801
         span(itemprop="creator").names Жан-Луи Давид
           span(itemprop="size").numbers 261 х 220 см, 
             span(itemprop="material") холст
               span(itemprop="price").price 3900
-    .slide.slide3
-      img(src="/img/breigel.jpg") 
+    .slide(itemscope, itemtype="https://schema.org/VisualArtwork").slide3
+      img(src="/img/ajax-loader.gif", data-src="/img/breigel.jpg", loading="lazy").js-lazy
+
       .details
         span.names
-          strong(itemprop="name") Охотники на снегу,
+          strong(itemprop="name") Охотники на снегу, 
             span(itemprop="year") 1565
         span(itemprop="creator").names Питер Брейгель Старший
         span(itemprop="size").numbers 117 х 162 см, 
           span(itemprop="material") холст
             span(itemprop="price").price 2400
-    .slide.slide6
-      img(src="/img/karavajjo.jpg")
+    .slide(itemscope, itemtype="https://schema.org/VisualArtwork").slide6
+      img(src="/img/ajax-loader.gif", data-src="/img/karavajjo.jpg", loading="lazy").js-lazy
+
       .details
         span.names
           strong(itemprop="name") Призвание апостола Матфея, 
@@ -41,21 +45,23 @@ a(href="#")#prev-bottom.arrow-left
         span(itemprop="size").numbers 322 × 340 см, 
           span(itemprop="material") холст
             span(itemprop="price").price 5300
-    .slide.slide7
-      img(src="/img/bosh.jpg")
+    .slide(itemscope, itemtype="https://schema.org/VisualArtwork").slide7
+      img(src="/img/ajax-loader.gif", data-src="/img/bosh.jpg", loading="lazy").js-lazy
+  
       .details
         span.names
-          strong(itemprop="name") Корабль дураков,
+          strong(itemprop="name") Корабль дураков, 
             span(itemprop="year") 1495-1500
         span(itemprop="creator").names Иероним Босх
           span(itemprop="size").numbers 58 × 33 см, 
             span(itemprop="material") холст
               span(itemprop="price").price 1700
-    .slide.slide8
-      img(src="/img/titzian.jpg") 
+    .slide(itemscope, itemtype="https://schema.org/VisualArtwork").slide8
+      img(src="/img/ajax-loader.gif", data-src="/img/titzian.jpg", loading="lazy", itemprop="").js-lazy
+
       .details
         span.names
-          strong(itemprop="name") Любовь небесная и любовь земная,
+          strong(itemprop="name") Любовь небесная и любовь земная, 
             span(itemprop="year") 1514
         span(itemprop="creator").names Тициан Вечеллио
         span(itemprop="size").numbers 118 × 279 см, 
