--- a/src/index.pug
+++ b/src/index.pug
@@ -1,21 +1,22 @@
-- var email = "shop.@reproduct.io";
+- var email = "shop@reproduct.io";
 
 doctype html
 html
   head
-  meta(charset = 'utf-8')
-  meta(name='viewport', content="initial-scale=1.0, width=device-width")
-  title Репродукцио
+    meta(charset = "utf-8")
+    meta(name="viewport", content="initial-scale=1.0, width=device-width")
+    link(rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="font" crossorigin)
+    title Репродукцио
   body
     main
       article.repro
-        .about
-          h1.name Репро<br>дукцио
+        .about(itemscope, itemtype="https://schema.org/LocalBusiness")
+          h1(itemprop="legalName").name Репро<br>дукцио
           p.slogan Оффлайн-магазин репродукций<br>шедевров мирового искусства
-          p(itemprop="streetAddress").contacts Санкт-Петербург,<br>ул. Адмирала Черокова, 18
+          p(itemprop="address").contacts Санкт-Петербург,<br>ул. Адмирала Черокова, 18
           p(itemprop="telephone").contacts +7&nbsp;812&nbsp;960-22-01<br>
-            a(href="mailto:#{email}", itemprop="email") #{email}
-        .slider1.js-slider
+            a(href= "mailto:" + email, itemprop="email") #{email}
+        .slider1
           include top-slider.pug
       article.popular
         h2 Популярное
@@ -23,49 +24,28 @@ html
         .slider2
           include bottom-slider.pug
       article.feedback
-        .feedback-wrapper
-          .text
-            h2 Написать нам
-            p Заполните форму справа<br>или отправьте письмо на 
-              a(href="mailto:#{email}", itemprop="email") #{email}
-            .copyrights
-              | Репродукцио, 2019<br>
-              a(href="#rules-popup").rules Правила обработки персональных данных
-          form.feedback-form(action="#")
-            .error-message.invisible Введите почту в формате<br>xxx@xxx.xxx
-            input(placeholder="Эл. почта", type="email", required).mail
-            textarea(placeholder="Сообщение", required).message
-            button Отправить сообщение
-          .success.invisible
-            h3 Отправлено
-            p Мы ответим вам на почту<br>в течение нескольких рабочих дней
-            
-    .shadow.invisible
-      #rules-popup
-        a(href="#").close
-          svg(width="18", height="17", viewBox="0 0 18 17", fill="#c10001")
-            path(d="M1.76145 1L17 16.2385M16.2385 1L1 16.2385", stroke="#c10001", stroke-width="2")
-        h4 Правила обработки персональных данных
-        p Предоставляя свои персональные данные Покупатель даёт согласие на обработку, хранение и использование своих персональных данных на основании ФЗ № 152-ФЗ «О персональных данных» от 27.07.2006 г. в следующих целях:
-
-        ul
-  
-          li Осуществление клиентской поддержки
-          li Получения Пользователем информации о маркетинговых событиях
-          li Проведения аудита и прочих внутренних исследований с целью повышения качества предоставляемых услуг.
-        p Под персональными данными подразумевается любая информация личного характера, позволяющая установить личность Покупателя такая как:
-        ul
-          li Фамилия, Имя, Отчество
+        include form.pug
           
-        p Персональные данные Покупателей хранятся исключительно на электронных носителях и обрабатываются с использованием автоматизированных систем, за исключением случаев, когда неавтоматизированная обработка персональных данных необходима в связи с исполнением требований законодательства.
-
-        p Продавец обязуется не передавать полученные персональные данные третьим лицам, за исключением следующих случаев:
-
-        p По запросам уполномоченных органов государственной власти РФ только по основаниям и в порядке, установленным законодательством РФ.
-
-        p Продавец оставляет за собой право вносить изменения в одностороннем порядке в настоящие правила, при условии, что изменения не противоречат действующему законодательству РФ. Изменения условий настоящих правил вступают в силу после их публикации на Сайте.
+    .shadow.invisible
+    #rules.popup.modal.invisible
+      a(href="#").close
+        svg(width="18", height="17", viewBox="0 0 18 17", fill="#c10001")
+          path(d="M1.76145 1L17 16.2385M16.2385 1L1 16.2385", stroke="#c10001", stroke-width="2")
+      h4 Правила обработки персональных данных
+      p Предоставляя свои персональные данные Покупатель даёт согласие на обработку, хранение и использование своих персональных данных на основании ФЗ № 152-ФЗ «О персональных данных» от 27.07.2006 г. в следующих целях:
+      ul
+        li Осуществление клиентской поддержки
+        li Получения Пользователем информации о маркетинговых событиях
+        li Проведения аудита и прочих внутренних исследований с целью повышения качества предоставляемых услуг.
+      p Под персональными данными подразумевается любая информация личного характера, позволяющая установить личность Покупателя такая как:
+      ul
+        li Фамилия, Имя, Отчество    
+      p Персональные данные Покупателей хранятся исключительно на электронных носителях и обрабатываются с использованием автоматизированных систем, за исключением случаев, когда неавтоматизированная обработка персональных данных необходима в связи с исполнением требований законодательства.
+      p Продавец обязуется не передавать полученные персональные данные третьим лицам, за исключением следующих случаев:
+      p По запросам уполномоченных органов государственной власти РФ только по основаниям и в порядке, установленным законодательством РФ.
+      p Продавец оставляет за собой право вносить изменения в одностороннем порядке в настоящие правила, при условии, что изменения не противоречат действующему законодательству РФ. Изменения условий настоящих правил вступают в силу после их публикации на Сайте.
     
-    svg(version="1.1", xmlns="http://www.w3.org/2000/svg" style="display:none")
-    filter#blur
-      feGaussianBlur(stdDeviation="3")
+  svg(version="1.1", xmlns="http://www.w3.org/2000/svg" style="display:none")
+  filter#blur
+    feGaussianBlur(stdDeviation="3")
 
